# maua-stylegan2

./: .gitignore  .gitmodules  README.md  accelerate_logcosh.py  accelerate_old.py  accelerate_segnet.py  audioreactive.py  audioreactive_example.py  audiovisual.py  augment.py  autoencoder.py  build_custom_transforms.sh  bulk-video.py  calc_inception.py  contrastive_learner.py  convert_weight.py  dataset.py  distributed.py  env.yml  environment.yml  fid.py  firstada_gpu0_mem_prof-17-Dec-20-10-15-28.prof.txt  firstada_gpu1_mem_prof-17-Dec-20-10-15-26.prof.txt  generate.py  generate_audiovisual.py  generate_audiovisual_deprecated.py  generate_video.py  gpu_profile.py  gpumon.py  highmem_gpu0_mem_prof-15-Dec-20-19-30-59.prof.txt  highmem_gpu1_mem_prof-15-Dec-20-19-30-58.prof.txt  inception.py  inception_vae.py  laplacian_seg.py  lightning.py  lookahead_minimax.py  lowmem_gpu0_mem_prof-16-Dec-20-09-29-42.prof.txt  lowmem_gpu1_mem_prof-16-Dec-20-09-29-40.prof.txt  lucidrains.py  model.py  (+21 more)
LICENSE/: LICENSE-AUDIOREACTIVE
ZSSGAN/: train.py
ZSSGAN/criteria/: clip_loss.py
ZSSGAN/model/: ZSSGAN.py  sg2_model.py
ZSSGAN/pytorch_CycleGAN_and_pix2pix/: test.py  train.py
ZSSGAN/pytorch_CycleGAN_and_pix2pix/data/: __init__.py  base_dataset.py  image_folder.py  template_dataset.py
ZSSGAN/pytorch_CycleGAN_and_pix2pix/models/: __init__.py  base_model.py  cycle_gan_model.py  networks.py  pix2pix_model.py  template_model.py  test_model.py
ZSSGAN/utils/: file_utils.py  text_templates.py
accelerate/: accelerate_inception.py  accelerate_logcosh.py  accelerate_segnet.py
audioreactive/: __init__.py  bend.py  default.py  latent.py  lib.py  signal.py  tauceti.py  temper.py  util.py
audioreactive/examples/: default.py  kelp.py  tauceti.py  temper.py  tvgf.py
lpips/: __init__.py  dist_model.py  pretrained_networks.py
models/: autoencoder.py  stylegan1.py  stylegan2.py
op/: __init__.py  conv2d_gradfix.py  fused_act.py  upfirdn2d.py
transforms/dilate/: CMakeLists.txt  op.cpp
transforms/erode/: CMakeLists.txt  op.cpp
transforms/rotate/: CMakeLists.txt  op.cpp
transforms/scale/: CMakeLists.txt  op.cpp
transforms/translate/: CMakeLists.txt  op.cpp
validation/: __init__.py  calc_fid.py  calc_inception.py  calc_ppl.py  inception.py  metrics.py  spectral_norm.py
validation/lpips/: __init__.py  base_model.py  dist_model.py  networks_basic.py  pretrained_networks.py  util.py
workspace/: naamloos_average_pitch.npy  naamloos_bass_sum.npy  naamloos_drop_latents.npy  naamloos_drop_latents_1.npy  naamloos_high_average_pitch.npy  naamloos_high_pitches_mean.npy  naamloos_intro_latents.npy  naamloos_metadata.json  naamloos_onsets.npy  naamloos_params.json  naamloos_pitches_mean.npy  naamloos_rms.npy
(+13 files in other folders)
